Dummy_Package_for_scratch_org/main/default/objects/Deployment_History__c/Deployment_History__c.object-meta.xml
<CustomObject>
    <label>Copado Deployment History</label>
    <nameField>
        <displayFormat>CDH-{0000000}</displayFormat>
        <label>Copado Deployment History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Copado Deployment History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>