Dummy_Package_for_scratch_org/main/default/objects/Deployment_History__c/fields/Deployment__c.field-meta.xml
<CustomField>
    <fullName>Deployment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment</label>
    <referenceTo>Deployment__c</referenceTo>
    <relationshipLabel>Copado Deployment History</relationshipLabel>
    <relationshipName>Copado_Deployment_History</relationshipName>
    <type>Lookup</type>
</CustomField>