Dummy_Package_for_scratch_org/main/default/objects/Deployment_History__c/fields/Deployment_Id__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Id__c</fullName>
    <inlineHelpText>In case of Deployment being deleted. Deployment Id will be kept in this field.</inlineHelpText>
    <label>Deployment Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>