Dummy_Package_for_scratch_org/main/default/objects/Deployment_History__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Step</fullName>
            </value>
            <value>
                <fullName>Destination Org</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>