Dummy_Package_for_scratch_org/main/default/objects/Deployment_History__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Copado_Deployment_History</relationshipName>
    <type>Lookup</type>
</CustomField>